fix: align about section heading

--- a/styles/site.css
+++ b/styles/site.css
@@ -483,11 +483,6 @@ h2 {
 }
 
 #about .section-heading-block {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  justify-content: space-between;
-  gap: 1rem 2rem;
   padding-top: 0;
 }
 
